[package]
name = "block-reader"
version = "0.0.1"
authors = ["Eugene The Dream"]
edition = "2021"

[[bin]]
name = "block-reader"
path = "src/bin/main.rs"

[dependencies]
openssl-probe = { version = "0.1.2" }

tokio = { version = "1.36.0", features = ["full", "tracing"] }

dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.2"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_repr = "0.1"
serde_with = "3.6.1"
borsh = "0.10.3"

near-primitives = "0.20.1"
near-crypto = "0.20.0"

tar = "0.4"
flate2 = "1.0"
futures = "0.3.30"


